--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <meta name="viewport" content="width=500, initial-scale=1.0" />
+    <meta name="viewport" content="width=100%, initial-scale=1.0" />
 
     <title>wallet.pi</title>
 
